force-app/main/default/objects/Job_Recurrence_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <label>Days of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description text to copy to shift records created on this schedule.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Number_of_Volunteers__c</fullName>
        <label>Desired Number of Volunteers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date_Time__c</fullName>
        <label>Schedule Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <inlineHelpText>The Job this Recurrence Schedule is for.</inlineHelpText>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipName>Volunteer_Job_Recurrence_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Weekly_Occurrence__c</fullName>
        <label>Weekly Occurrence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Every</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Recurrence Schedule</label>
    <listViews>
        <fullName>AllJRS</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Job__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Schedule_Start_Date_Time__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JRS-{00000}</displayFormat>
        <label>JRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Recurrence Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JRS_Days_Of_Week_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Days_of_Week__c)</errorConditionFormula>
        <errorDisplayField>Days_of_Week__c</errorDisplayField>
        <errorMessage>You must specify at least one value for Days of Week.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JRS_Weekly_Occurrence_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Weekly_Occurrence__c)</errorConditionFormula>
        <errorDisplayField>Weekly_Occurrence__c</errorDisplayField>
        <errorMessage>You must specify at least one value for Weekly Occurrence</errorMessage>
    </validationRules>
</CustomObject>